future nexgen spacing fix

--- a/wp-content/themes/conall-child/src/scss/pages/page-tomorrow.scss
+++ b/wp-content/themes/conall-child/src/scss/pages/page-tomorrow.scss
@@ -61,7 +61,7 @@ div#section-euhcc { /* section */
 div#section-nexgen {
     background-color: $white;
     aspect-ratio: 1920/2000;
-    margin-top: -200px !important;
+    margin-top: -225px !important;
     padding-bottom: 5% !important;
     div#col-nexgen {
         div#nextgen-row1 {
